--- a/Web/Properties/launchSettings.json
+++ b/Web/Properties/launchSettings.json
@@ -3,11 +3,10 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:54974",
-      "sslPort": 44323
+      "applicationUrl": "http://localhost:60569/",
+      "sslPort": 44383
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
@@ -19,7 +18,6 @@
     "Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
